# systems-manager

./: .bumpversion.cfg  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  a2a.json  compose.yml  connector_manifest.yml  debug.Dockerfile  dump_schemas.py  index.html  mcp.compose.yml  mcp_config.json  mkdocs.yml  pre_commit_output.txt  pyproject.toml  requirements.txt  scratch_ce.py  scratch_ce_static.py  setup.py  sitemap.xml  test_ag_ui.py  vulture_whitelist.py
.github/workflows/: pipeline.yml
.security/: authenticated_negative.py  repository_fuzz.py
.specify/specs/code-enhancement-20260512/: CHECKLIST.md  DRIFT_REPORT.md  spec.json  spec.md  tasks.json  tasks.md
.specify/specs/code-enhancement-20260524/: spec.json  spec.md  tasks.json  tasks.md
.specify/specs/mcp-tool-consolidation/: spec.md  tasks.md
agent_utilities_synergy/: index.html
code_coverage/: index.html
concepts/: index.html
configuration/: index.html
day_0_provisioning/: index.html
deployment/: index.html
docker/: Dockerfile  agent.compose.yml  compose.yml  debug.Dockerfile  mcp.compose.yml
docs/: agent_utilities_synergy.md  code_coverage.md  concepts.md  configuration.md  day_0_provisioning.md  deployment.md  host-lifecycle-coverage.md  index.md  installation.md  legacy_readme.md  multi_host.md  overview.md  sudo_security.md  usage.md
docs/pillars/: 1_agent_os_layer.md
host-lifecycle-coverage/: index.html
installation/: index.html
legacy_readme/: index.html
multi_host/: index.html
overview/: index.html
pillars/1_agent_os_layer/: index.html
scratch/: fix_nosec.py  fix_vulture.py
scripts/: check_release_artifacts.py  security_contract.py  validate_a2a_agent.py
search/: search_index.json
specify_reports/systems-manager/: code_enhancement_report.md  results_static.json
sudo_security/: index.html
system_manager/: __init__.py  system_manager.py
systems_manager/: __init__.py  __main__.py  agent.py  agent_os_tools.py  agent_server.py  bmc_credentials.py  graph_config.py  k8s_detect.py  kg_ingest.py  mcp.py  mcp_config.json  mcp_server.py  models.py  os_health.py  os_provider.py  os_provider_tools.py  storage_health.py  storage_tools.py  sudo_helper.py  systems_manager.py  systems_manager_a2a.py  systems_manager_agent.py  systems_manager_mcp.py  tools.py  utils.py  version.py
systems_manager/agent/: CRON.md  CRON_LOG.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  templates.py
systems_manager/agent_data/: A2A_AGENTS.md  IDENTITY.md  MCP_AGENTS.md  NODE_AGENTS.md  knowledge_graph.db  mcp_config.json
systems_manager/connectors/: __init__.py  mcp_source_presets.json  tool_schema_fingerprints.json
systems_manager/mcp/: __init__.py
systems_manager/ontology/: __init__.py  certification.json  systems.ttl
systems_manager/ontology/fixtures/: records.json
systems_manager/ontology/mappings/: source.yaml
systems_manager/ontology/migrations/: manifest.json
systems_manager/ontology/shapes/: connector.shacl.ttl
systems_manager/prompts/: infrastructure_specialist.json  main_agent.json
systems_manager/skills/: __init__.py
systems_manager/skills/bash/: SKILL.md
systems_manager/skills/ipmi-bmc-manager/: SKILL.md
systems_manager/skills/ipmi-bmc-manager/references/: cheatsheet.md
systems_manager/skills/nic-bond-provisioner/: SKILL.md
systems_manager/skills/nic-bond-provisioner/references/: recovery.md
systems_manager/skills/nic-bond-provisioner/scripts/: apply-bond.sh  gen-bond-config.sh
systems_manager/skills/systems-manager-cron-management/: SKILL.md
systems_manager/skills/systems-manager-disk-management/: SKILL.md
systems_manager/skills/systems-manager-filesystem/: SKILL.md
systems_manager/skills/systems-manager-firewall-management/: SKILL.md
systems_manager/skills/systems-manager-linux/: SKILL.md
systems_manager/skills/systems-manager-log-management/: SKILL.md
systems_manager/skills/systems-manager-network-management/: SKILL.md
systems_manager/skills/systems-manager-node-management/: SKILL.md
systems_manager/skills/systems-manager-operations/: SKILL.md
systems_manager/skills/systems-manager-operations/agents/: openai.yaml
systems_manager/skills/systems-manager-operations/references/: catalog.md
systems_manager/skills/systems-manager-process-management/: SKILL.md
systems_manager/skills/systems-manager-python-management/: SKILL.md
systems_manager/skills/systems-manager-service-management/: SKILL.md
systems_manager/skills/systems-manager-shell-management/: SKILL.md
systems_manager/skills/systems-manager-ssh-management/: SKILL.md
systems_manager/skills/systems-manager-system-management/: SKILL.md
systems_manager/skills/systems-manager-user-management/: SKILL.md
systems_manager/skills/systems-manager-windows/: SKILL.md
systems_manager/skills/systems-starter/: SKILL.md
systems_manager/skills/text_editor/: SKILL.md
tests/: conftest.py  health_check2.py  test_action_discovery.py  test_ag_ui.py  test_agent_server.py  test_cluster_sudo.py  test_collapsed_tools.py  test_concept_parity.py  test_fastmcp.py  test_fastmcp_error.py  test_file_manager.py  test_get_system_logs.py  test_init.py  test_k8s_detect.py  test_k8s_lifecycle_guard.py  test_kg_ingest.py  test_linux_managers.py  test_main.py  test_mcp_routing.py  test_mcp_security_policy.py  test_mcp_server.py  test_os_health.py  test_os_provider.py  test_os_provider_tools.py  test_platform_managers.py  test_remote_host_routing.py  test_security_boundaries.py  test_storage_health.py  test_sudo_helper.py  test_systems_manager_base.py  test_windows_manager.py
usage/: index.html
