[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "systems-manager"
version = "1.12.0"
description = "Systems Manager will update your system and install/upgrade applications. Additionally, as allow AI to perform these activities as an MCP Server"
readme = "README.md"
classifiers = [ "Development Status :: 5 - Production/Stable", "License :: Public Domain", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.11, <3.14"
dependencies = [ "agent-utilities>=0.11.0", "psutil>=7.0.0", "distro>=1.9.0",]
[[project.authors]]
name = "Audel Rouhi"
email = "knucklessg1@gmail.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
mcp = [ "agent-utilities[mcp]>=0.11.0",]
agent = [ "agent-utilities[agent,logfire]>=0.11.0",]
all = [ "agent-utilities[mcp,agent,logfire]>=0.11.0",]
test = [ "pytest", "pytest-asyncio", "pytest-cov",]

[project.scripts]
systems-manager = "systems_manager.systems_manager:main"
systems-manager-mcp = "systems_manager.mcp_server:mcp_server"
systems-manager-agent = "systems_manager.agent_server:agent_server"

[tool.setuptools]
include-package-data = true

[tool.codespell]
ignore-words-list = "fo"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[tool.setuptools.package-data]
systems_manager = [ "mcp_config.json", "agent_data/**",]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B",]
ignore = [ "E402", "E501", "B008",]

[tool.setuptools.packages.find]
where = [ ".",]

[tool.vulture]
ignore_names = ["request", "config"]
