[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "systems-manager"
version = "2.0.0"
description = "Systems Manager will update your system and install/upgrade applications. Additionally, as allow AI to perform these activities as an MCP Server"
readme = "README.md"
classifiers = [ "Development Status :: 5 - Production/Stable", "License :: Public Domain", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.12,<3.15"
dependencies = [ "agent-utilities>=1.27.1,<2.0.0", "pydantic>=2.13.4", "psutil>=7.2.2", "distro>=1.9.0",]
[[project.authors]]
name = "Project Maintainers"
email = "maintainers@users.noreply.github.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
mcp = [ "agent-utilities[mcp]>=1.27.1,<2.0.0",]
agent = [ "agent-utilities[agent-runtime,logfire]>=1.27.1,<2.0.0",]
all = [ "agent-utilities[mcp,agent-runtime,logfire]>=1.27.1,<2.0.0",]
test = [ "pytest>=9.1.1", "pytest-asyncio>=1.4.0",]

[project.scripts]
systems-manager = "systems_manager.systems_manager:main"
systems-manager-mcp = "systems_manager.mcp_server:mcp_server"
systems-manager-agent = "systems_manager.agent_server:agent_server"
systems-manager-helper = "systems_manager.sudo_helper:main"
systems-manager-health = "systems_manager.os_health:main_sample"
systems-manager-health-derive = "systems_manager.os_health:main_derive"

[project.entry-points."agent_utilities.skill_providers"]
systems-manager = "systems_manager.skills"

[project.entry-points."agent_utilities.ontology_providers"]
systems-manager = "systems_manager.ontology"

[project.entry-points."agent_utilities.source_connector_providers"]
systems-manager = "systems_manager.connectors"

[project.entry-points."agent_utilities.prompt_providers"]
systems-manager = "systems_manager.prompts"

[tool.setuptools]
include-package-data = true

[tool.codespell]
ignore-words-list = "fo"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true

[tool.setuptools.package-data]
systems_manager = [ "agent_data/**", "prompts/**", "skills/**", "ontology/**", "connectors/**",]

[tool.setuptools.exclude-package-data]
systems_manager = [ "agent_data/*.db", "agent_data/*.sqlite*", "agent_data/chats", "agent_data/CRON_LOG.md", "agent_data/MEMORY.md", "agent_data/USER.md",]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B",]
ignore = [ "E402", "E501", "B008",]

[tool.setuptools.packages.find]
where = [ ".",]

[tool.vulture]
ignore_names = ["request", "config"]
